--- a/sources/css/main.css
+++ b/sources/css/main.css
@@ -378,3 +378,28 @@ ul {
     margin-bottom: 2rem;
     box-shadow: none;
 }
+
+.chat-box {
+    height: 300px;
+    overflow-y: scroll;
+}
+.avatars-box {
+    padding: 30px;
+    border-top: 1px solid rgb(230, 236, 243);
+}
+.avatars-box img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    opacity: 0.2;
+    transition: .3s all;
+}
+
+.avatars-box img.active {
+   opacity: 1;
+}
+
+.avatars-box img:hover {
+    opacity: 1;
+}
